[package]
name = "serial_to_influx"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
time = { version = "0.3", features = ["macros"] }
urlencoding = "2.1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
csv = "1.3"
rumqttc = "0.24"